fix scroll on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,8 @@ header.header h1 {
   display: none;
   padding: 20px 1em;
   border-top: 1px solid #ddd;
+  height: 100%;
+  overflow-y: scroll;
 }
 .menu input {
   display: none;
@@ -159,6 +161,9 @@ section.info h3 {
 section.info .detail {
   padding: 1em;
   font-size: 90%;
+  height: 100%;
+  overflow-y: scroll;
+  padding-bottom:6em;
 }
 section.info ul {
   margin-top: 2em;
